tests/syntax-error/for2.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g for2.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: for2.silly:12:7: error: Undeclared variable j
// CHECK:    12 | PRINT j;
// CHECK:       |       ^

FOR (INT32 i: (0, 3)) {
    FOR (INT32 j: (0, 2)) {
        PRINT "more";
    };
};
PRINT j;
